--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,12 @@
-fastapi==0.111.0
-uvicorn==0.30.1
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pydantic==2.8.2
+rapidfuzz==3.9.7
+numpy==2.1.0
 pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.4.2
-scipy==1.13.1
+openpyxl==3.1.5
+python-dotenv==1.0.1
+scikit-learn==1.5.1
 joblib==1.4.2
+scipy==1.13.1
 openai>=1.50.2
