:green_heart: ci: 워크플로우에 이미지 정리 추가

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,3 +62,5 @@ jobs:
               -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
               -e OPENAI_MODEL=${{ secrets.OPENAI_MODEL }} \
               ${{ env.IMAGE }}:latest
+            
+            docker image prune -af || true
